--- a/Homework/03-Sorting-and-Searching-Algorithms/3. Sorting-and-Searching-Algorithms-Lab-Skeleton/Sortable-Collection/Sortable-Collection.csproj
+++ b/Homework/03-Sorting-and-Searching-Algorithms/3. Sorting-and-Searching-Algorithms-Lab-Skeleton/Sortable-Collection/Sortable-Collection.csproj
@@ -47,6 +47,7 @@
     <Compile Include="SortableCollectionPlayground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortableCollection.cs" />
+    <Compile Include="Sorters\BubleSorter.cs" />
     <Compile Include="Sorters\BucketSorter.cs" />
     <Compile Include="Sorters\HeapSorter.cs" />
     <Compile Include="Sorters\InPlaceMergeSorter.cs" />
