--- a/QA-Automation/Homework/HW-01-QA-Automation-Selenium-Basic/Tests/AutomationTests/AutomationTests.csproj
+++ b/QA-Automation/Homework/HW-01-QA-Automation-Selenium-Basic/Tests/AutomationTests/AutomationTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0F185E2D-6006-4C38-B5C6-F24985837C97}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AuitomationTests</RootNamespace>
-    <AssemblyName>AuitomationTests</AssemblyName>
+    <RootNamespace>AutomationTests</RootNamespace>
+    <AssemblyName>AutomationTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -37,7 +37,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Drawing" />
+    <Reference Include="System.Data" />
     <Reference Include="WebDriver, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Selenium.WebDriver.3.3.0\lib\net40\WebDriver.dll</HintPath>
       <Private>True</Private>
@@ -48,17 +48,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DataReader.cs" />
     <Compile Include="DemoQANegative.cs" />
     <Compile Include="DemoQA.cs" />
+    <Compile Include="Models\RegistrationUser.cs" />
+    <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\RegistrationPage\RegistrationPageConstants.cs" />
+    <Compile Include="Pages\RegistrationPage\RegistrationPageExtensions.cs" />
+    <Compile Include="Pages\RegistrationPage\RegistrationPageElements.cs" />
+    <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="QAAutomation.cs" />
     <Compile Include="GoogleSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Data\Data.xls" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\example.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Selenium.WebDriver.ChromeDriver.2.28.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\..\packages\Selenium.WebDriver.ChromeDriver.2.28.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
