Create take screenshot extension

--- a/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/App.config
+++ b/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/App.config
@@ -3,5 +3,6 @@
   <appSettings>
     <add key="dataPath" value="..\..\Data\" />
     <add key="logsPath" value="..\..\Logs\" />
+    <add key="screenshotsPath" value="..\..\Screenshots\" />
   </appSettings>
 </configuration>
