--- a/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/AutomationTests.csproj
+++ b/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/AutomationTests.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Pages\RegistrationPage\RegistrationPageMap.cs" />
     <Compile Include="Pages\RegistrationPage\RegistrationPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\DriverExtensions.cs" />
+    <Compile Include="Extensions\DriverExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Content Include="Data\example.jpg" />
     <Content Include="Logs\readme.txt" />
+    <Content Include="Screenshots\readme.txt" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
