--- a/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/AutomationTests.csproj
+++ b/QA-Automation/Homework/HW-03-QA-Automation-Selenium-WebDriver-Advanced/Tests/AutomationTests/AutomationTests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="WebDriver, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -98,6 +99,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Data\DataSource.xlsx" />
+    <None Include="Extensions\adblock_chrome.crx" />
+    <None Include="Extensions\adblock_firefox.xpi" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -105,10 +108,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\example.jpg" />
-    <Content Include="Logs\readme.txt" />
-    <Content Include="Screenshots\readme.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Logs\" />
+    <Folder Include="Screenshots\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\..\packages\Selenium.WebDriver.ChromeDriver.2.29.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
